<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    app:elevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="310dp">

        <ImageView
            android:id="@+id/image_avatar_url"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/image_news"
            android:scaleType="fitXY"
            tools:srcCompat="@drawable/img_item" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_avatar_url"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tvPublishItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/iv_bookmark"
            android:padding="8dp"
            android:textStyle="bold"
            tools:text="@string/date_format" />

        <ImageView
            android:id="@+id/iv_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/image_news"
            android:padding="8dp"
            android:src="@drawable/ic_favorite_border" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>